<resources>
    <!--<string name="google_app_id">1:908489897514:android:c4b184356a77f317</string>-->
    <string name="app_name">EstateCore</string>
    <string name="MAP_API_KEY">AIzaSyBYWotVfxgtI2-MJdvL6A1Bigl_X8y-Bb0</string>
    <string name="facebook_app_id">1493607460939405</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_menu_change">Menu Change</string>
    <string name="no_data_available"> There is no data to display.</string>
    <string name="search_hint">Search here!</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="cheese_ipsum">Jarlsberg lancashire edam. Dolcelatte hard cheese brie st. agur blue cheese caerphilly bavarian bergkase cheese and biscuits mascarpone.</string>
    <string name="title_activity_gallery">GalleryActivity</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="city_desc">City Description Here</string>
    <string name="city_name">City Name</string>
    <string name="switch_city">Switch City</string>
    <string name="home">Home</string>
    <string name="show_on_map">Show All On Map</string>
    <string name="search_keyword">Search By Keyword</string>
    <string name="profile">Profile</string>
    <string name="favourite_item">My Favourite Items</string>
    <string name="favourite_city">My Favourite Cities</string>
    <string name="logout">Logout</string>
    <string name="title_activity_selected_city">SelectedCityActivity</string>
    <string name="display_name">Display Message</string>
    <string name="connection_error">Oops! App cannot connect to your server</string>
    <string name="title_activity_inquiry">InquiryActivity</string>
    <string name="select_city">Please Select City</string>
    <string name="hello_world">Hello world!</string>
    <string name="inquiry">Inquiry</string>
    <string name="inquiry_message">Inquiry Message</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="OK">OK</string>
    <string name="CANCEL">CANCEL</string>
    <string name="agree">AGREE</string>
    <string name="disagree">DISAGREE</string>
    <string name="more_info">MORE INFO</string>

    <string name="choose_color">Choose Color</string>
    <string name="choose_size">Choose Size</string>
    <string name="location_search_title">1 Mile TO 50 Miles</string>
    <string name="search">Search</string>
    <string name="complete_address_title">Current Address</string>
    <string name="qty">Qty</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="view_more_review">VIEW MORE REVIEWS</string>
    <string name="price">PRICE</string>

    <string name="pls_wait">Please Wait</string>
    <string name="gps_not_ready">GPS is not ready to take your latitude and longitude. Please wait for a while to search.</string>
    <string name="sorry_title">Sorry</string>
    <string name="no_google_play">Your device not available Google Play Service. Please install it.</string>
    <string name="map_icon_desc">Image Description</string>

    <string name="inquiry_success">Your inquiry message has been submitted to system.</string>
    <string name="inquiry_fail">Unfortunately your inquiry message is not able to submit at this moment. Please try again later.</string>
    <string name="name_validation_message">Please fill the name.</string>
    <string name="email_validation_message">Please fill the email.</string>
    <string name="email_format_validation_message">Please check your email format.</string>
    <string name="inquiry_validation_message">Please fill the inquiry message.</string>

    <string name="no_review_count">Welcome for review</string>
    <string name="review">Review</string>
    <string name="review_list">Review List</string>
    <string name="reviews">Reviews</string>
    <string name="time_ago">times ago</string>
    <string name="add_first_review">Add First Review</string>
    <string name="add_new_review">Add New Review</string>
    <string name="ratings">Ratings</string>
    <string name="facebook_login">Facebook Login</string>
    <string name="twitter_login">Twitter Login</string>
    <string name="paypal_login">Paypal Login</string>
    
    <string name="title_activity_review_list">ReviewListActivity</string>
    <string name="title_activity_user_login">UserLogin</string>

    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="register">Register</string>
    <string name="password_validation_message">Please fill the password.</string>
    <string name="login_fail">Login not successful. Please try again later.</string>
    <string name="title_activity_review_entry">ReviewEntry</string>
    <string name="title_activity_user_register">UserRegister</string>

    <string name="review_validation_message">Please fill the inquiry message.</string>
    <string name="review_success">Your review has been submitted to system.</string>
    <string name="review_fail">Unfortunately your review is not able to submit at this moment. Please try again later.</string>
    <string name="register_fail">Register not successful. Please try again later.</string>
    <string name="register_success">Congratulation, your account has been registered.</string>
    <string name="delivery_address">DELIVERY ADDRESS</string>
    <string name="billing_address">BILLING ADDRESS</string>
    <string name="title_activity_edit_profile">EditProfileActivity</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="edit">EDIT</string>
    <string name="title_activity_password_update">PasswordUpdateActivity</string>
    <string name="save">SAVE</string>
    <string name="password_change">Password Change</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="about_me">About Me</string>
    <string name="profile_edit_fail">Failed to update the profile.</string>
    <string name="password_not_equal">Password are not equal.</string>
    <string name="like">Like</string>
    <string name="like_fail">Oops! Unfortunately, it is not able to like this item.</string>
    <string name="like_need_auth">Sorry, You may need to login first.</string>
    <string name="img_desc">Image Description</string>
    <string name="title_activity_user_forgot_password">UserForgotPassword</string>
    <string name="forgot_message">Please provide your registered email for next instruction.</string>
    <string name="request">Request</string>
    <string name="share_message">Hey, this is very nice.</string>
    <string name="push_noti_setting">Push Notification Setting</string>
    <string name="notification_setting">Push Notification Setting</string>
    <string name="latest_message">Latest Message From System</string>
    <string name="title_activity_news">NewsActivity</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="explore_on_map">Explore On Map</string>
    <string name="news_list">News List</string>
    <string name="title_activity_news_detail">NewsDetailActivity</string>
    <string name="forgot_success">Your request has been submitted to system. Please take a look your email for the next instruction.</string>
    <string name="request_not_found">Requested resource not found</string>
    <string name="something_wrong">Something went wrong at server end</string>
    <string name="cannot_connect">Oops! Cannot connect to Internet or remote server is not up and running</string>
    <string name="rating_fail">Your rating could not submit to system. Please try again.</string>
    <string name="login_required">You may need to login first.</string>
    <string name="first_rating">Welcome for first rating</string>
    <string name="service_not_available">GCM Service is not available</string>
    <string name="gcm_register_success">Push Notification registered successfully.</string>
    <string name="gcm_register_not_success">Sorry, Push Notification could not submit.</string>
    <string name="gcm_unregister_success">Push Notification unregistered successfully.</string>
    <string name="photo_upload_success">Profile photo is uploaded successfully.</string>
    <string name="photo_upload_not_success">Sorry, profile photo could not upload.</string>

    <string name="json_status_success">success</string>
    <string name="json_status_error">error</string>
    <string name="location">Location</string>
    <string name="about_city">About City</string>
    <string name="title_activity_search_result">SearchResultActivity</string>
    <string name="search_result">Search Results</string>
    <string name="search_city_label">Selected City :</string>
    <string name="search_keyword_label">Keyword :</string>
    <string name="banner_ad_unit_id">ca-app-pub-6414469769989507/6549753073</string>
    <string name="price_start">Price Range (</string>
    <string name="price_end">) : </string>
    <string name="price_divider"> - </string>
    <string name="meter_start">Sq. Meter Range (</string>
    <string name="forSale">For Sale</string>
    <string name="forRent">For Rent</string>
    <string name="view_agent">View Agent Detail</string>
    <string name="title_activity_item_search">ItemSearchActivity</string>
    <string name="search_criteria">Search Criteria</string>
    <string name="select_category">Select Category</string>
    <string name="total_rooms">Total Rooms</string>
    <string name="bed_rooms">Bed Rooms</string>
    <string name="for_sell">For Sell</string>
    <string name="for_rent">For Rent</string>
    <string name="bath_rooms">Bath Rooms</string>
    <string name="select_price_range">Please Select Price Range</string>
    <string name="select_meter_range">Please Select Sq. Meter Range</string>
    <string name="selected_category_name">Category :</string>
    <string name="total_rooms_count">Total Room :</string>
    <string name="bed_rooms_count">Bed Room :</string>
    <string name="bath_rooms_count">Bath Room :</string>
    <string name="price_range">Price Range :</string>
    <string name="meter_range">Sq. Meter Range :</string>
    <string name="for_sell_label">For Sell :</string>
    <string name="for_rent_label">For Rent :</string>
    <string name="search_result_count">Search Result Count :</string>

</resources>
